# insurity-telemetrics-predictor-poc

./: .gitignore  README.md  pyproject.toml
data/: __init__.py  mock.py
docs/: InsurityAI.drawio  api_endpoints.md  datagen.md  dynamodb_schema.md  feature_extraction.md  local_dev.md  local_pipeline_demo.md  pricing_engine.md  synthetic_data_generation.md  ubi_report.md  xgboost_model.md
models/: xgboost-model
models/aws_sagemaker/: __init__.py  xgboost_model.py
scripts/: local_pipeline_demo.py  mock_dashboard_server.py  test_api_endpoint.py  test_dashboard_api.py
scripts/deploy/: build_pricing_bundle.sh  build_python_deps_package.sh  build_validation_bundle.sh  deploy.tf  pre_model_pipeline.tf
scripts/local/: local_pipeline_demo.py  mock_dashboard_server.py
src/aws_lambda/: __init__.py
src/aws_lambda/dashboard_snapshot/: handler.py
src/aws_lambda/feature_extraction/: README.md  handler.py
src/aws_lambda/feature_extraction/features/: __init__.py  base.py  core.py  registry.py
src/aws_lambda/ingestion/: third_party_ingestion.py
src/aws_lambda/pricing_engine/: __init__.py  formulas.py  handler.py
src/aws_lambda/validation/: handler.py
src/frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json
src/frontend/src/: App.tsx  global.css
src/frontend/src/components/: DrivingEventsFeed.tsx  GamificationBadges.tsx  Layout.tsx  PremiumHistoryChart.tsx  PremiumSummary.tsx  SafetyFactorBreakdown.tsx
src/frontend/src/hooks/: useDashboardData.ts
src/frontend/src/services/: api.ts
src/frontend/src/types/: index.ts
(+2 files in other folders)
